--- a/index.html
+++ b/index.html
@@ -226,11 +226,12 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
+            <!--
             <div class="resume-item">
               <h4>Bachelor of Telematics Engineering</h4>
               <h5>2018 - 2021 (in progress)</h5>
               <p><em><a href="https://www.unadmexico.mx/" target="_blank">Universidad Abierta y A Distancia de Mexico</a>, MX</em></p>
-            </div>
+            </div> -->
             <div class="resume-item">
               <h4>Full Stack Web Developer Diploma</h4>
               <h5>2019 - 2020</h5>
