--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="devicon-nodejs-plain colored"></i>
+              <i class="devicon-linux-plain colored"></i>
               <p><strong>GNU/Linux</strong></p>
             </div>
           </div>
