--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:fabricio.garcia@outlook.com">fabricio.garcia@outlook.com</a></p>
+                <p><a href="mailto:fabricio.garcia@mail.com">fabricio.garcia@mail.com</a></p>
               </div>
 
               <div class="phone">
