docs: Update Porofessional Experience section

--- a/index.html
+++ b/index.html
@@ -255,11 +255,17 @@
               <h5>2019 - 2020</h5>
               <p><em>Smart Dev - Nuevo Laredo, MX</em></p>
               <ul>
-                <li>Used various technologies, including JavaScript to make code repairs and optimize corporate website.</li>
-                <li>Determined coding requirements for site creation, including e-commerce capability and security and specialized scripts.</li>
-                <li>Converted mockups into HTML, JavaScript, AJAX and JSON.</li>
-                <li>Tested websites and performed user testing and troubleshooting prior to live deployment.</li>
-                <li>Implemented website and integrated solutions into business operations.</li>
+                <li>Collaborated with a team of Developers, Designers and Producers to bring our client’s vision to life.
+                  </li>
+                <li>Participated in the development of new projects: analysis, design, tests, documentation and loading.</li>
+                <li>Contributed to a variety of web-based projects (React, Rails).</li>
+                <li>Participated in the development of our internal methods and processes.</li>
+                <li>Made improvements to existing websites.</li>
+                <li>Conducted code reviews and make improvements with other developers.</li>
+                <li>Maintained codebase and make improvements as necessary.</li>
+                <li>Documented APIs and components for other developers.</li>
+                <li>Some experience with server-side scripting (PHP and Node) and relational databases.</li>
+                <li>Familiarity with Wordpress.</li>
               </ul>
             </div>
             <div class="resume-item">
